# DopplerLab

./: .gitignore  DopplerNet_SA_XPINN.ipynb  README.md
IDMT_experiments/src/: pyproject.toml
IDMT_experiments/src/idmt_experiments/: __init__.py  config.py  eval.py  infer.py  infer_vs13.py  run.py  run_batch.py  test_clips.py  train.py  training_resume.py
IDMT_experiments/src/idmt_experiments/cnn/: __init__.py  augment.py  dataset.py  eval.py  eval_cli.py  inference.py  interventions.py  metrics.py  model.py  train.py  train_recipe.py
IDMT_experiments/src/idmt_experiments/engine/: train_mel.py
IDMT_experiments/src/idmt_experiments/fusion/: __init__.py  __main__.py  eval.py
IDMT_experiments/src/idmt_experiments/hybrid/: __init__.py  __main__.py  dataset.py  eval.py  film_model.py  film_train.py  model.py  train.py
IDMT_experiments/src/idmt_experiments/physics/: __init__.py  __main__.py  audit.py  dataset.py  eval.py  eval_cli.py  features.py  interventions.py  spectrogram.py  train.py
IDMT_experiments/src/idmt_experiments/scripts/: compare_phases_bcd.py
IDMT_experiments/src/idmt_experiments/src/: baselines.py  features.py  media_io.py  preprocess.py  splits.py  weather_audit.py
IDMT_experiments/src/idmt_experiments/transfer/: __init__.py  (+3 more)
engine_acoustics/src/: pyproject.toml
engine_acoustics/src/engine_acoustics/: __init__.py  config.py  demo.py  order_tracking.py  physics.py  synthesis.py
length_estimation/src/: pyproject.toml
length_estimation/src/length_estimation/: __init__.py  config.py  eval.py  infer.py  jasa_week.py  run.py  train.py
(+336 files in other folders)
