[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "engine_acoustics"
version = "0.1.0"
description = "Four-stroke engine acoustic synthesis and order-domain analysis"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
audio = ["librosa>=0.10", "soundfile>=0.12"]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine_acoustics*"]
