[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "length_estimation"
version = "0.1.0"
description = "VS13 vehicle length estimation from pass-by spectrograms"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["length_estimation*"]
